XWIKI-19352: Indexing of the attachments usage on the wiki