@@ -22,15 +22,20 @@ package org.xwiki.rendering.internal.parser;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import javax.inject.Named;
 import javax.inject.Provider;
 
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 import org.xwiki.component.manager.ComponentManager;
 import org.xwiki.model.EntityType;
+import org.xwiki.model.reference.AttachmentReference;
 import org.xwiki.model.reference.DocumentReference;
-import org.xwiki.model.reference.DocumentReferenceResolver;
 import org.xwiki.model.reference.EntityReference;
 import org.xwiki.model.reference.EntityReferenceResolver;
 import org.xwiki.rendering.block.Block;
@@ -67,6 +72,8 @@ import static org.mockito.Mockito.when;
 @ComponentTest
 class LinkParserTest
 {
+    private static final DocumentReference CURRENT_REFERENCE = new DocumentReference("wiki", "space", "page");
+
     @InjectMockComponents
     private LinkParser linkParser;
 
@@ -76,9 +83,8 @@ class LinkParserTest
     @MockComponent
     private EntityReferenceResolver<ResourceReference> entityReferenceResolver;
 
-    @MockComponent
-    @Named("current")
-    private DocumentReferenceResolver<EntityReference> currentDocumentReferenceResolver;
+    @Mock
+    private XDOM xdom;
 
     @BeforeComponent
     void beforeComponent(MockitoComponentManager componentManager) throws Exception
@@ -89,8 +95,6 @@ class LinkParserTest
     @Test
     void extractReferences(MockitoComponentManager componentManager) throws Exception
     {
-        XDOM xdom = mock(XDOM.class);
-
         LinkBlock linkBlock1 = mock(LinkBlock.class);
         LinkBlock linkBlock2 = mock(LinkBlock.class);
         LinkBlock linkBlock3 = mock(LinkBlock.class);
@@ -100,21 +104,12 @@ class LinkParserTest
         MacroBlock macroBlock1 = mock(MacroBlock.class);
         MacroBlock macroBlock2 = mock(MacroBlock.class);
 
-        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).then(invocationOnMock -> {
-            BlockMatcher blockMatcher = invocationOnMock.getArgument(0);
-            assertTrue(blockMatcher instanceof ClassBlockMatcher);
-            ClassBlockMatcher classBlockMatcher = (ClassBlockMatcher) blockMatcher;
-            if (classBlockMatcher.match(mock(LinkBlock.class))) {
-                return Arrays.asList(linkBlock1, linkBlock2, linkBlock3);
-            } else if (classBlockMatcher.match(mock(ImageBlock.class))) {
-                return Collections.singletonList(imageBlock);
-            } else if (classBlockMatcher.match(mock(MacroBlock.class))) {
-                return Arrays.asList(macroBlock1, macroBlock2);
-            } else {
-                fail("Only Link, Image and macro should be filtered from the xdom.");
-            }
-            return null;
-        });
+        when(this.xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
+            .then(new AnswerGetBlocks(
+                List.of(linkBlock1, linkBlock2, linkBlock3),
+                List.of(imageBlock),
+                List.of(macroBlock1, macroBlock2)
+            ));
 
         ResourceReference ref1 = mock(ResourceReference.class);
         ResourceReference ref2 = mock(ResourceReference.class);
@@ -141,62 +136,103 @@ class LinkParserTest
         when(defaultMacroRefactoring.extractReferences(macroBlock2)).thenReturn(Collections.singleton(ref8));
 
         assertEquals(new HashSet<>(Arrays.asList(ref1, ref2, ref3, ref4, ref5, ref6, ref7, ref8)),
-            this.linkParser.extractReferences(xdom));
+            this.linkParser.extractReferences(this.xdom));
     }
 
     @Test
     void getUniqueLinkedEntityReference()
     {
-        XDOM xdom = mock(XDOM.class);
-        EntityType entityType = EntityType.DOCUMENT;
-        DocumentReference currentReference = mock(DocumentReference.class);
+        ResourceReference ref1 = new ResourceReference("myref1", ResourceType.URL);
+        ResourceReference ref2 = new ResourceReference("myref2", ResourceType.ATTACHMENT);
+        ResourceReference ref3 = new ResourceReference("myref3", ResourceType.SPACE);
+        ResourceReference ref4 = new ResourceReference("", ResourceType.DOCUMENT);
 
-        LinkBlock linkBlock1 = mock(LinkBlock.class);
-        LinkBlock linkBlock2 = mock(LinkBlock.class);
-        LinkBlock linkBlock3 = mock(LinkBlock.class);
-        LinkBlock linkBlock4 = mock(LinkBlock.class);
+        LinkBlock linkBlock1 = new LinkBlock(List.of(), ref1, false);
+        LinkBlock linkBlock2 = new LinkBlock(List.of(), ref2, false);
+        LinkBlock linkBlock3 = new LinkBlock(List.of(), ref3, false);
+        LinkBlock linkBlock4 = new LinkBlock(List.of(), ref4, false);
 
-        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).then(invocationOnMock -> {
+        when(this.xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenAnswer(new AnswerGetBlocks(
+            List.of(linkBlock1, linkBlock2, linkBlock3, linkBlock4),
+            List.of(),
+            List.of()
+        ));
+
+        EntityReference entityReference2 = new EntityReference("myref2", EntityType.DOCUMENT);
+        EntityReference entityReference3 = new EntityReference("myref3", EntityType.SPACE);
+        when(this.entityReferenceResolver.resolve(ref2, EntityType.DOCUMENT)).thenReturn(entityReference2);
+        when(this.entityReferenceResolver.resolve(ref3, EntityType.DOCUMENT)).thenReturn(entityReference3);
+
+        assertEquals(Set.of(entityReference2), this.linkParser.getUniqueLinkedEntityReferences(this.xdom,
+            Map.of(EntityType.DOCUMENT, Set.of(ResourceType.DOCUMENT, ResourceType.ATTACHMENT)),
+            CURRENT_REFERENCE));
+        verify(this.entityReferenceResolver).resolve(ref2, EntityType.DOCUMENT);
+    }
+
+    @Test
+    void getUniqueLinkedEntityReferenceAttachment()
+    {
+        AttachmentReference entityReference1 =
+            new AttachmentReference("file.txt", new DocumentReference("wiki", "space", "page"));
+        DocumentReference entityReference2 = new DocumentReference("wiki", "space2", "page2");
+        AttachmentReference entityReference3 =
+            new AttachmentReference("file.txt", new DocumentReference("wiki", "space2", "page"));
+
+        ResourceReference ref1 = new ResourceReference("ref1", ResourceType.ATTACHMENT);
+        ResourceReference ref2 = new ResourceReference("ref2", ResourceType.DOCUMENT);
+        ResourceReference ref3 = new ResourceReference("ref3", ResourceType.ATTACHMENT);
+
+        List<LinkBlock> linkBlocks = List.of(
+            new LinkBlock(List.of(), ref1, false),
+            new LinkBlock(List.of(), ref2, false),
+            new LinkBlock(List.of(), ref3, false)
+        );
+        when(this.xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
+            .thenAnswer(new AnswerGetBlocks(linkBlocks, List.of(), List.of()));
+
+        when(this.entityReferenceResolver.resolve(ref1, EntityType.ATTACHMENT)).thenReturn(entityReference1);
+        when(this.entityReferenceResolver.resolve(ref2, EntityType.DOCUMENT)).thenReturn(entityReference2);
+        when(this.entityReferenceResolver.resolve(ref3, EntityType.ATTACHMENT)).thenReturn(entityReference3);
+
+        Set<EntityReference> actual = this.linkParser.getUniqueLinkedEntityReferences(this.xdom, Map.of(
+            EntityType.DOCUMENT, Set.of(ResourceType.DOCUMENT),
+            EntityType.ATTACHMENT, Set.of(ResourceType.ATTACHMENT)
+        ), CURRENT_REFERENCE);
+        assertEquals(Set.of(entityReference3, entityReference2), actual);
+    }
+
+    private static final class AnswerGetBlocks implements Answer<Object>
+    {
+        private final List<LinkBlock> answerLinkBlock;
+
+        private final List<ImageBlock> answerImageBlock;
+
+        private final List<MacroBlock> answerMacroBlock;
+
+        private AnswerGetBlocks(List<LinkBlock> answerLinkBlock, List<ImageBlock> answerImageBlock,
+            List<MacroBlock> answerMacroBlock)
+        {
+            this.answerLinkBlock = answerLinkBlock;
+            this.answerImageBlock = answerImageBlock;
+            this.answerMacroBlock = answerMacroBlock;
+        }
+
+        @Override
+        public Object answer(InvocationOnMock invocationOnMock) throws Throwable
+        {
             BlockMatcher blockMatcher = invocationOnMock.getArgument(0);
             assertTrue(blockMatcher instanceof ClassBlockMatcher);
             ClassBlockMatcher classBlockMatcher = (ClassBlockMatcher) blockMatcher;
             if (classBlockMatcher.match(mock(LinkBlock.class))) {
-                return Arrays.asList(linkBlock1, linkBlock2, linkBlock3, linkBlock4);
+                return this.answerLinkBlock;
+            } else if (classBlockMatcher.match(mock(ImageBlock.class))) {
+                return this.answerImageBlock;
+            } else if (classBlockMatcher.match(mock(MacroBlock.class))) {
+                return this.answerMacroBlock;
+            } else {
+                fail("Only Link, Image and macro should be filtered from the xdom.");
             }
-            return Collections.emptyList();
-        });
-        ResourceReference ref1 = mock(ResourceReference.class);
-        ResourceReference ref2 = mock(ResourceReference.class);
-        ResourceReference ref3 = mock(ResourceReference.class);
-        ResourceReference ref4 = mock(ResourceReference.class);
-
-        when(linkBlock1.getReference()).thenReturn(ref1);
-        when(linkBlock2.getReference()).thenReturn(ref2);
-        when(linkBlock3.getReference()).thenReturn(ref3);
-        when(linkBlock4.getReference()).thenReturn(ref4);
-
-        when(ref1.getType()).thenReturn(ResourceType.URL);
-        when(ref2.getType()).thenReturn(ResourceType.ATTACHMENT);
-        when(ref3.getType()).thenReturn(ResourceType.SPACE);
-        when(ref4.getType()).thenReturn(ResourceType.DOCUMENT);
-
-        when(ref1.getReference()).thenReturn("myref1");
-        when(ref2.getReference()).thenReturn("myref2");
-        when(ref3.getReference()).thenReturn("myref3");
-
-        EntityReference entityReference2 = mock(EntityReference.class);
-        EntityReference entityReference3 = mock(EntityReference.class);
-        when(this.entityReferenceResolver.resolve(ref2, entityType)).thenReturn(entityReference2);
-        when(this.entityReferenceResolver.resolve(ref3, entityType)).thenReturn(entityReference3);
-
-        DocumentReference otherReference = mock(DocumentReference.class);
-        when(this.currentDocumentReferenceResolver.resolve(entityReference2, EntityType.DOCUMENT))
-            .thenReturn(otherReference);
-        when(this.currentDocumentReferenceResolver.resolve(entityReference3, EntityType.DOCUMENT))
-            .thenReturn(currentReference);
-
-        assertEquals(Collections.singleton(entityReference2),
-            this.linkParser.getUniqueLinkedEntityReferences(xdom, entityType, currentReference));
-        verify(this.currentDocumentReferenceResolver).resolve(entityReference3, EntityType.DOCUMENT);
+            return null;
+        }
     }
 }
